@@ -10,9 +10,9 @@ bookmark =
 	country = LON
 	country = NRM
 	country = APL
-	country = SDL
 	country = PAP
 	country = DIE
+	country = SDL
 	country = ASE
 	country = SWE
 	country = KIE
