@@ -933,6 +933,7 @@ SDL_ideas = {
     
     trigger = {
         tag = SDL
+        started_in = 1266.4.4
     }
     free = yes
     SDL_idea_1 = {
