@@ -863,9 +863,9 @@
  MEN_idea_7: "Ilyas Bey Mosque"
  MEN_idea_7_desc: "Ilyas Bey had an impressive mosque built in Miletus in 1403. It is part of a complex consisting of a madrasah, a religious educational institute, and a hammam, a bath building. The prayer hall is covered by a dome, which is made of brick and covered with tiles, sits on an octagonal base that rests on the four walls. Let's build more mosques."
 #Stendal
- SDL_ideas: "Nordmarker Ideas"
- SDL_ideas_start: "Nordmarker Traditions"
- SDL_ideas_bonus: "Nordmarker Ambition"
+ SDL_ideas: "Stendaler Ideas"
+ SDL_ideas_start: "Stendaler Traditions"
+ SDL_ideas_bonus: "Stendaler Ambition"
  SDL_idea_1: "Minting the Ewiger Pfennig"
  SDL_idea_1_desc: "Stendal was the oldest mint of the march of Brandenburg after Brandenburg an der Havel. In the margraviate of Brandenburg, several towns, including Stendal, paid a one-off settlement to the margrave and received the right to mint the so-called 'Ewiger Pfennig'. This was a penny coin, which was minted with a constant silver content over several decades, avoiding coin disparagement and usually also coin deterioration."
  SDL_idea_2: "Member of the Hanseatic League"
