@@ -904,9 +904,9 @@
  MEN_idea_7: "Ilyas-Bey-Moschee"
  MEN_idea_7_desc: "Ilyas Bey ließ 1403 in Milet eine beeindruckende Moschee bauen. Sie ist Teil eines Gebäudekomplexes bestehend aus einer Madrasa, einem religiösen Bildungsinstitut, und einem Hammam, einem Badehaus. Die Gebetshalle wird von einer Kuppel mit einem Durchmesser von 14 m bedeckt, die aus Ziegelsteinen und Fliesen besteht, und steht auf einem achteckigen Sockel, der auf den vier Wänden ruht. Lasst uns weitere Moscheen errichten."
 #Stendal
- SDL_ideas: "Nordmarkische Ideen"
- SDL_ideas_start: "Nordmarkische Traditionen"
- SDL_ideas_bonus: "Nordmarkische Ambitionen"
+ SDL_ideas: "Stendalische Ideen"
+ SDL_ideas_start: "Stendalische Traditionen"
+ SDL_ideas_bonus: "Stendalische Ambitionen"
  SDL_idea_1: "Prägt den Ewigen Pfennig"
  SDL_idea_1_desc: "Neben Brandenburg an der Havel war Stendal die älteste Münzstätte der Mark Brandenburg. In der Markgrafschaft Brandenburg zahlten mehrere Städte, darunter auch Stendal, eine einmalige Abfindung an den Markgrafen und erhielten dafür das Münzrecht für die Prägung des sogenannten Ewigen Pfennigs. Dieser war eine Pfennigmünze, die über mehrere Jahrzehnte hinweg mit einem gleich bleibenden Silbergehalt geprägt wurde und damit nicht den Münzverrufungen und meist auch -verschlechterungen unterlag."
  SDL_idea_2: "Mitglied der Hanse"
