@@ -19,7 +19,8 @@
 -More German localization additions
 
 #Changes
--Changed the following flags: Blankenburg, Mansfeld, Merseburg, Querfurt, Stolberg, Wernigerode, Leisnig, Falkenstein, Hall, Limpurg, Leuchtenberg, Esslingen, Rottenmunster, Weil 
+-Changed the following flags: Blankenburg, Mansfeld, Merseburg, Querfurt, Stolberg, Wernigerode, Leisnig, Falkenstein, Hall, Limpurg, Leuchtenberg, Esslingen, Rottenmunster, Weil, Biberach, Burgau, Buchhorn, Ellwangen, Oettingen, Stendal
+-Overhaul of the Stendal tag: its default name is now Nordmark and it is now a suggested country for the 1054 bookmark; its starting ruler has been buffed and its capital is now Haldensleben
 -Missions will no longer require you to increase the loyalty of estates over 60% or their landshare at all
 -Admin tech 40 is now required to form Romania, but it is no longer required for Byzantium to not exist
 -Austria is no longer formable by endgame nations
